# estima

./: Cargo.toml  README.md
estima/: Cargo.toml  README.md
estima/examples/: ahrs_ukf.rs  cv_ukf.rs  s2_path.rs
estima/src/: lib.rs  sigma_points.rs
estima/src/filter/: mod.rs
estima/src/kf/: averaging.rs  error.rs  mod.rs  traits.rs
estima/src/manifold/: composite.rs  euclidean.rs  mod.rs  quaternion.rs  s2.rs
estima/src/math/: scalar.rs
estima/src/sigma_points/: merwe_scaled.rs  mod.rs  tests.rs  traits.rs  transform.rs  weights.rs
estima/src/sr_ukf/: engine.rs  mod.rs  square_root.rs
estima/src/ukf/: averaging.rs  engine.rs  error.rs  mod.rs  unscented.rs
estimacros/: Cargo.toml
estimacros/src/: lib.rs
examples/: Cargo.toml  cvm.rs  repr_unionize.rs  vector_union.rs
src/lib/: lib.rs
