[package]
authors = ["Alexander Zhuravlev"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Kalman estimator"
documentation = "https://docs.rs/estima"
keywords = ["estimator", "navigation"]
license = "MIT"
name = "estima"
repository = "https://github.com/copterust/estima"
version = "0.2.1"
edition = "2021"
readme = "../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
nalgebra = { version = "0.33.2", default-features = false, features = ["libm"] }
typenum = "1.18.0"

[dev-dependencies]
approx = "0.5.1"
rerun = "0.24.0"
rand = "0.8.5"
ndarray = "0.16.1"

[[example]]
name = "cv_ukf"
path = "examples/cv_ukf.rs"
