[package]
authors = ["Alexander Zhuravlev"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Kalman estimator"
documentation = "https://docs.rs/estima"
keywords = ["estimator", "navigation"]
license = "MIT"
name = "estima"
repository = "https://github.com/copterust/estima"
version = "0.3.0"
edition = "2021"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = []
rerun = ["dep:rerun"]

[dependencies]
nalgebra = { version = "0.33.2", default-features = false, features = ["libm"] }
typenum = "1.18.0"
rerun = { version = "0.24.0", optional = true }

[dev-dependencies]
approx = "0.5.1"
rand = "0.9.2"
rand_distr = "0.5.1"

[[example]]
name = "cv_ukf"
path = "examples/cv_ukf.rs"

[[example]]
name = "ahrs_ukf"
path = "examples/ahrs_ukf.rs"
