[package]
authors = ["Alexander Zhuravlev"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Kalman estimator (macrosupport)"
documentation = "https://docs.rs/estima"
keywords = ["estimator", "navigation"]
license = "MIT"
repository = "https://github.com/copterust/estima"
name = "estimacros"
version = "0.2.0"
edition = "2021"

[features]

[dependencies]
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2.0", features = ["full"] }
